tests/ui/suggestions/only-replace-intended-coma-not-all-in-pattern.stderr
error: unexpected `,` in pattern
  --> $DIR/only-replace-intended-coma-not-all-in-pattern.rs:12:30
   |
LL |         Foo { x: 2, ch: ',' }, Foo { x: 3, ch: '@' } => (),
   |                              ^
   |
help: try adding parentheses to match on a tuple...
   |
LL |         (Foo { x: 2, ch: ',' }, Foo { x: 3, ch: '@' }) => (),
   |         +                                            +
help: ...or a vertical bar to match on alternatives
   |
LL -         Foo { x: 2, ch: ',' }, Foo { x: 3, ch: '@' } => (),
LL +         Foo { x: 2, ch: ',' } | Foo { x: 3, ch: '@' } => (),
   |

error: aborting due to 1 previous error

